--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -9,7 +9,7 @@
 <div id="center_col" class="content no_right_sidebar">
   <div id="show_layout">
 
-    <div class="center"><h4>Invoice Service Rates</h4></div>
+    <div class="center"></div>
 <div ><%= render 'form' %></div>
     </div>
     </div>
