--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -1,10 +1,9 @@
 <% simple_form_for [@work_order,@reply] do |f| %>
   <%= f.hidden_field :work_order_id %>
   <%= f.hidden_field :user_id, :value => current_user.id %>
-    <%= f.input :content,:label => [t 'reply.message']  , :input_html => { :cols => 75, :rows => 6 } %>
-  <% if current_user.employee? %>
-    <%= f.input :private, :label => [t 'reply.internal'], :hint => [t 'reply.internal_hint'] %>
-<% end %>
+    <%= f.input :content,:label => [t 'reply.message']  , :input_html => { :rows => 6 } %>
+    <%= f.input :private, :label => [t 'reply.internal'], :hint => [t 'reply.internal_hint'] if current_user.employee? %>
+
     <div class="center">
        <%= f.submit "Post Reply now" %>
     </div>
