--- a/app/views/replies/edit.html.erb
+++ b/app/views/replies/edit.html.erb
@@ -10,9 +10,8 @@
 <h1>Editing reply</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @reply %> |
-<%= link_to 'Back', replies_path %>
+|
+<%= link_to 'Back', :back %>
 
       </div>
       </div>
