--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -43,6 +43,7 @@ acronym:hover {cursor:help;}
 .col_name {width: 50%;text-align: right;float: left;}
 .col_value {padding-left:10px;width: 30%; text-align: left;float: left;}
 .col_value_new { color: #990000 !important; text-decoration: blink !important;}
+.printed_logo {float: right; padding: 5px}
 
 
 /*Pages Typo...*/
@@ -192,7 +193,7 @@ input.select.required {border: 2px solid #8b0000; background-color:#ffffcc;font-
 .priority_main_5 td {background-color: #cc0033; font-weight:bolder;}
 
 /*Invoice Line Items Table CSS*/
-#invoice_line_items {border-collapse:collapse;line-height: normal;font-size:0.9em;}
+#invoice_line_items {border-collapse:collapse;line-height: normal;font-size:0.9em;width: 100%;overflow: hidden;padding:0.2em;}
 #invoice_line_items td {border: 1px solid #000066;padding:3px 7px 2px 7px;}
 #invoice_line_items td .no_border {border: none !important;}
 #invoice_line_items th {color: #ffffff;background-color: #4B7399;border: 1px solid #000066;padding:3px 7px 2px 7px;}
@@ -200,6 +201,7 @@ input.select.required {border: 2px solid #8b0000; background-color:#ffffcc;font-
 #invoice_line_items th a {color:#ccccff;}
 #invoice_line_items th a {color:#ccccff;}
 #invoice_line_items th .current {padding-right:14px;background: right center no-repeat;}
+#invoice_line_items tr td input[type='text']{width:auto; min-width: 10px;}
 .clean input {border: none;background: none;}
 
 
@@ -220,7 +222,7 @@ input.select.required {border: 2px solid #8b0000; background-color:#ffffcc;font-
 
 
 /*Invoice Typo*/
-#invoice {display: inline-block;}
+#invoice {display: inline-block; width: 100%}
 .bill_header {font-size: 1.2em; text-transform: uppercase;color: #000000; font-weight: bold;}
 .bill_from, .bill_to {font-size:.8em;width:27em;padding: 10px; line-height: 0.5em}
 .bill_to {float:left;}
